    * server/ob_types.c: Initialize the apply hook for mimics.
    * include/typesproto.h: Function prototype for apply hook initialization.
    * include/object.h: Add MIMIC type and update max type number.
    * types/mimic/mimic.c: Add code for MIMIC type.
    * common/item.c: Add new type to the table defined here. Make it like container.

2018-06-02  Daniel Hawkins
    * server/time.c: Simplify the code for determining the placement of a new object in change_object().

2018-05-31  Daniel Hawkins
    * server/attack.c: Fix double application of resistance for life stealing attacktype.
      Also, add more complex algorithm for slowness to reduce >1 speed sometimes.

2018-05-28  Daniel Hawkins
    * common/living.c: Simplification of bracer/force/armor AC/WC code in fix_object:
      if we don't replace the best value, don't waste time subtracting and adding the same
      value to the object.
      Also, fix bug #823 by directly applying bracer ac and wc for serpentmen players.
    * server/monster.c: Skip performance shortcuts in monster_compute_path for
      multitile monsters.

2018-05-23  Daniel Hawkins
    * server/attack.c: Make death attacks do no damage when the monster cannot
      be affected by that death attack. Also make the order of the strstr check
      work for multiple races defined on the creature, and only one on the weapon.
      Make the strstr reorder on triple-damage calc, too.
    * server/init.c: Change race loading logic so that a race defined in lib/races
      is added to an arch's race field, rather than replace it. This allows for
      "slay vampire" and other slaying fields that aren't a normal race to actually
      function while still preserving summon lists for summon cult monster.

2018-05-21  Daniel Hawkins
    * server/attack.c: Make death attacks relevant.

2018-05-19  Daniel Hawkins
    * server/player.c: Load background music when moving through tiled maps.

2018-02-12  Daniel Hawkins